//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  username String [unique, not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  profile Profile
  postLikes PostLike [not null]
  postComments PostComment [not null]
}

Table Profile {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  bio String
  user User [not null]
  userId String [unique, not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  link String
  user User
  userId String
  postLikes PostLike [not null]
  postComments PostComment [not null]
}

Table PostLike {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type String [not null]
  post Post
  postId String
  user User
  userId String
}

Table PostComment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content String [not null]
  post Post
  postId String
  user User
  userId String
}

Ref: Profile.userId - User.id

Ref: Post.userId > User.id

Ref: PostLike.postId > Post.id

Ref: PostLike.userId > User.id

Ref: PostComment.postId > Post.id

Ref: PostComment.userId > User.id